Bug 264893 - Installation fails if project configured to run several tasks simultaneously
Summary: Installation fails if project configured to run several tasks simultaneously
Status: RESOLVED FIXED
Alias: None
Product: kdevelop
Classification: Applications
Component: Build tools: Make (other bugs)
Version First Reported In: 4.2.0
Platform: Arch Linux Linux
: NOR normal
Target Milestone: 4.2.0
Assignee: kdevelop-bugs-null
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2011-01-30 21:48 UTC by Guillaume DE BURE
Modified: 2011-07-25 21:09 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Guillaume DE BURE 2011-01-30 21:48:20 UTC
Version:           4.2.0 (using KDE 4.6.0) 
OS:                Linux

I configure Kdevelop to use 4 simultaneous jobs on my core i5 laptop. Building is fine, but install fails with the following error:

/home/guillaume/Developpement/skrooge/build> kdesu -t -c make -j4 install
kdesu: Unknown option 'j4'.
kdesu: Use --help to get a list of available command line options.
*** Failed ***

However, a mere "make -j4 install" in konsole works, so I'm not sure what's wrong here...

Thanks :)

Reproducible: Always




OS: Linux (x86_64) release 2.6.36-ARCH
Compiler: gcc
Comment 1 Guillaume DE BURE 2011-04-26 17:04:03 UTC
Git commit 941203f0f96bc8d7be325a31962b4256387e783e by Guillaume de Bure.
Committed on 26/04/2011 at 17:12.
Pushed by gdebure into branch 'master'.

Replace -c switch in kdesu by --

BUG: 264893

M  +1    -1    projectbuilders/makebuilder/makejob.cpp     

http://commits.kde.org/kdevelop/941203f0f96bc8d7be325a31962b4256387e783e
Comment 2 Milian Wolff 2011-07-25 21:09:04 UTC
Git commit 15554ae82b1ecaf04e530e547235d796abbdef59 by Milian Wolff, on behalf of Guillaume de Bure.
Committed on 26/04/2011 at 17:12.
Pushed by mwolff into branch '4.2'.

backport from master: Replace -c switch in kdesu by --

CCBUG: 264893

M  +1    -1    projectbuilders/makebuilder/makejob.cpp

http://commits.kde.org/kdevelop/15554ae82b1ecaf04e530e547235d796abbdef59