Replace -c switch in kdesu by --

BUG: 264893